--- a/app/views/admins/_dashboard.html.erb
+++ b/app/views/admins/_dashboard.html.erb
@@ -10,7 +10,7 @@
              <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition d'articles", admins_articles_path, class: 'text-default' %>
             </li>
             <li class="list-group-item bg-transparent px-0">
-             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catégories", categories_path, class: 'text-default' %>
+             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catégories", admins_categories_path, class: 'text-default' %>
             </li>
             <li class="list-group-item bg-transparent px-0 dropdown">
             <i class="fas fa-sticky-note text-primary"></i> 
