--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,10 +1,10 @@
 <section class="section-landing">	
 	<div class="landing-image-container">
 			
-		<%= link_to static_pages_home_path do %>
+		<%= link_to categories_path do %>
 			<%= image_tag("landing.JPG", class: "landing-image") %>
 		<% end %>
 
-		<h1> <%= link_to "NOÉMIE BLUMET PHOTO", static_pages_home_path, id: "landing-title" %></h1>		
+		<h1> <%= link_to "NOÉMIE BLUMET PHOTO", categories_path, id: "landing-title" %></h1>		
 	</div>
 </section>
