--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -7,7 +7,8 @@
  <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>
 
               <h4 class="text-center">   <%= label_tag 'Quel sera son titre ? ', nil, class: "font-weight-bold" %> </h4>
-                <p class="text-center"><%= text_field_tag 'name', @category.name, class: "" %></p>
+                <p class="text-center"><%= text_field_tag 'name', @category.name, class: "", placeholder: "titre" %></p>
+                <p class="text-center"><%= text_field_tag 'description', @category.description, placeholder: "description" , class: "" %></p>
                   <%= submit_tag "Créer la nouvelle catégorie", class: "btn btn-primary mb-3 mt-3" %>
                 <% end %>
             </div>
