--- a/app/views/admins/catalogues/show.html.erb
+++ b/app/views/admins/catalogues/show.html.erb
@@ -1,12 +1,14 @@
 <section>
+
+	LALALLALA CATALOGUE
 <div class="container-fluid">
 	<h3 class="text-center mt-5 mb-5">Ajout de photo ?</h3>
 	<div class="row">
 		<div class="col col-9">
 			
-			<%= form_tag category_images_path(@category), multipart: true do %>
-				<%= file_field_tag 'images[]', :multiple => true %>
-				<%= hidden_field_tag :category, @category.name	, params[:category] || {} %>
+			<%= form_tag catalogue_pictures_path(@catalogue), method: "post", multipart: true do %>
+				<%= file_field_tag 'pictures[]', :multiple => true %>
+				<%= hidden_field_tag :catalogue, @catalogue.name	, params[:catalogue] || {} %>
 				<button type="button" ><%= submit_tag "upload" %></button>
 			<% end %>			
 		</div>
@@ -14,17 +16,17 @@
 		<div class="col-3">
 			<%= form_tag url_for(action: 'update'), method: "patch", class: "mt-4" do %>
 				<%= label_tag 'Quel sera son nom ? ', nil, class: "font-weight-bold" %>
-                <%= text_field_tag 'name', @category.name, class: "form-control" %>
+                <%= text_field_tag 'name', @catalogue.name, class: "form-control" %>
 				<%= submit_tag "Éditer le nom", class: "btn btn-primary mb-3 mt-3" %>
   			<%end %>
 		</div>
 	</div>
 
 	<div class="row">
-		<% @category.images.each do |image| %>
+		<% @catalogue.pictures.each do |picture| %>
 			<div class="col-2 mt-5 ml-5 mr-5">
-				<%= image_tag((image),  class:"mt-2 ml-2 fit") %>
-				<%= link_to "X", category_delete_image_attachment_path(@category.id, image.id), method: "delete" %>
+				<%= image_tag((picture),  class:"mt-2 ml-2 fit") %>
+				<%= link_to "X", catalogue_delete_image_attachment_path(@catalogue.id, picture.id), method: "delete" %>
 			</div>
 		<% end %>
  	</div>
