--- a/app/views/admins/_dashboard.html.erb
+++ b/app/views/admins/_dashboard.html.erb
@@ -12,6 +12,9 @@
             <li class="list-group-item bg-transparent px-0">
              <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catégories", admins_categories_path, class: 'text-default' %>
             </li>
+            <li class="list-group-item bg-transparent px-0">
+             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catalogues", admins_catalogues_path, class: 'text-default' %>
+            </li>
             <li class="list-group-item bg-transparent px-0 dropdown">
             <i class="fas fa-sticky-note text-primary"></i> 
 
