--- a/app/views/admins/articles/edit.html.erb
+++ b/app/views/admins/articles/edit.html.erb
@@ -1,24 +1,37 @@
  <!-- Form zone  -->
  <h1 class="text-center mt-5"> Édition d'article </h1>
 
-    <div class="row">
-        <div class="col col-6 my-form mx-auto">
-             <%= form_tag url_for(action: 'update'), method: "patch", class: "mt-4" do %>
+ <div class="row">
+    <div class="col col-6 my-form mx-auto">
+       <%= form_tag url_for(action: 'update'), method: "patch", class: "mt-4" do %>
 
-                 <p><%= label_tag 'Titre', nil, class:" mb-3" %></b>
-                 <%= text_field_tag 'title', @article.title, class: "form-control"  %>
-                 </p>
+       <%= label_tag 'Titre : ', nil, class: "font-weight-bold " %>
+       <%= text_area_tag 'title', @article.title, placeholder:"Titre", class: "form-control mb-4" %>
 
-                 <p><%= label_tag 'Contenu', nil, class:" mb-3" %></b>
-                 <%= text_field_tag 'body', @article.body, class: "form-control" %>
-                 </p>
-                 <p>
-                 <%= label_tag 'Sa catégorie',nil, class: "font-weight-bold mb-3 " %>
-                 <%= select_tag 'category', options_from_collection_for_select(Category.all, :id, :name), class: "form-control", prompt: 'Catégorie' %>
-                </p>
-                 <div class="my-btn-display mt-5">
-                 <%= submit_tag "Editer", class: "btn btn-primary mb-3 my-btn" %>
-                 </div>
-            <% end %> 
+       <%= label_tag 'Son contenu :', nil, class: "font-weight-bold  " %>
+       <%= text_area_tag 'body', @article.body, placeholder: "Écris ton article ici", class: "form-control mb-4" %>
+
+       <%= label_tag 'Public cible:', nil, class: "font-weight-bold  " %>
+       <%= text_area_tag 'public', @article.public, placeholder: "public cible", class: "form-control mb-4" %>
+
+       <%= label_tag 'Nombre de personne :', nil, class: "font-weight-bold  " %>
+       <%= text_area_tag 'number', @article.number, placeholder: "entre un nombre", class: "form-control mb-4" %>
+
+       <%= label_tag 'Matériel logistique :', nil, class: "font-weight-bold  " %>
+       <%= text_area_tag 'equipment', @article.equipment, placeholder: "Matériel", class: "form-control mb-4" %>
+
+       <%= label_tag 'Durée :', nil, class: "font-weight-bold  " %>
+       <%= text_area_tag 'duration', @article.duration, placeholder: "Entre une durée en heure", class: "form-control mb-4" %>
+
+       <%= label_tag 'Tarif :', nil, class: "font-weight-bold  " %>
+       <%= text_area_tag 'price', @article.price, placeholder: "Entre un nombre ", class: "form-control mb-4" %>
+
+       <%= label_tag 'Sa catégorie :',nil, class: "font-weight-bold " %>
+       <%= select_tag 'category', options_from_collection_for_select(Category.all, :id, :name), class: "form-control mb-5", prompt: 'Catégorie' %>
+
+       <div class="my-btn-display mt-5">
+           <%= submit_tag "Editer", class: "btn btn-primary mb-3 my-btn" %>
+       </div>
+       <% end %> 
+   </div>
 </div>
-    </div>
