--- a/app/views/admins/categories/index.html.erb
+++ b/app/views/admins/categories/index.html.erb
@@ -1,4 +1,3 @@
-ADMIN CATEGORY
 <div class="container mt-5 ">
 		<%= link_to '+', new_category_path, class: ' btn btn-primary mb-5', style: "font-size: 30px;" %>
 	<% @categories.each do |cat| %>
@@ -9,8 +8,8 @@ ADMIN CATEGORY
 			<div class="row">
 				
 			<% cat.images.each do |image| %>
-			<div class="col col-4">
-			<%= image_tag(image, style: "max-width: 300px") %>
+			<div class="col col-3 mb-3">
+			<%= image_tag(image, class:"fit") %>
 			</div>
 		<% end %>
 		
