--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
             </li>            
 
             <li class="nav-item">
-                <%= link_to "Catalogue", static_pages_espace_pro_path, class: "nav-link" %>
+                <%= link_to "Catalogue", catalogues_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
                 <%= link_to "Cours & Ateliers", articles_path, class: "nav-link" %>
