--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -161,18 +161,50 @@ h2 {
     margin: auto;
 }
 
+ /*          RESPONSIVE GALERY              */
 
+ .container-fluid2 {
+ 	box-sizing: border-box;
 
-.flex {
-	display:flex;
-	flex-direction: row;
-	justify-content: center;
-	flex-wrap: wrap;
-	align-items: stretch;
-	flex-shrink: 3;
-	flex-basis: min-content;
+ }
+
+.row-flex {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
+.column-flex {
+  flex: 25%;
+  max-width: 100%;
+  padding: 0 4px;
+  flex-shrink: 8;
+
+}
+
+.column-flex img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media (max-width: 800px) {
+  .column-flex {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  .column-flex {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+
+/* *************************************** */
 
 .footer {
   background-color: #F6F8F7; 
@@ -182,15 +214,108 @@ h2 {
 
 }
 
-
+.fit2 {
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+}
 
 .fit {
 	width: 200px;
-
 	height: 200px;
 	object-fit: cover;
-;
 }
 
 
+/*Test modal*/
+/* Style the Image Used to Trigger the Modal */
+ /* Style the Image Used to Trigger the Modal */
+.carrd-img-top{
+  border-radius: 1px;
+  cursor: pointer;
+  transition: 0.3s;
+}
 
+.carrd-img-top:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.container-test {
+  position: relative;
+  text-align: center;
+  color: white;
+}
