--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,6 +23,9 @@
             <li class="nav-item"> 
                 <%= link_to "À propos", static_pages_about_me_path, class: "nav-link" %>
             </li>
+             <li class="nav-item"> 
+                <%= link_to "Test", static_pages_test_path, class: "nav-link" %>
+            </li>
 
             <% if user_signed_in? && current_user.id_admin == true %>
                   <li class="nav-item">
