--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container margin-footer">
 	<% @articles.each do |article| %>
 		<div class="row">
 			<div class="col col-12">
