--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
  <!-- menu de l'exposition -->
 
-<div class="section mb-5 test1">
-    <div class="container-fluid ">
+
+    <div class="container-fluid margin-footer">
         <div class="row">
             <div class="col col-12">
                 <ul class ="nav nav-tabs border-light my-menu justify-content-center">
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-</div>
+
 
 
 
