--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container mt-5 pb-3">
+			<div class="container-fluid mt-5 pb-3">
 				<div class="row" style="border-top: 1px solid #7C978A;">    
 					<div class="col col-12 text-center info"> Noemieblumet@gmail.com</div>
 					<div class="col col-12 text-center info"> 06.49.51.51.90 </div>
